# Random_point_generation

./: .gitignore  CMakeLists.txt  Point_.sln  Point_.vcxproj  Point_.vcxproj.filters  Source.cpp  point.h  shift_to.cpp
Debug/: Point_.exe.recipe  Point_.ilk  Point_.vcxproj.FileListAbsolute.txt  vc143.idb
Debug/Point_.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Point_.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: cmdline.h  creating_a_cluster.h
src/: Source.cpp  basic_creation.cpp  cmdline.cpp  main.cpp  shift_to.cpp
x64/Debug/: Point_.exe.recipe  Point_.ilk  Point_.vcxproj.FileListAbsolute.txt  source.obj.enc  vc143.idb
x64/Debug/Point_.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Point_.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
